--- a/Login-Page.html
+++ b/Login-Page.html
@@ -84,7 +84,7 @@
         // Check if username and password match the expected credentials
         if (username === 'Guest' && password === 'Password') {
           // Redirect to the second part of the website
-          window.location.href = 'Login-Page/dash.html';  // Example URL for the second part of the site
+          window.location.href = 'dash.html';  // Example URL for the second part of the site
         } else {
           // If invalid, show an alert
           alert('Invalid username or password');
