--- a/dash.html
+++ b/dash.html
@@ -10,8 +10,10 @@
     <div class="card">
       <h1>Welcome to the Dashboard</h1>
       <p>You're successfully logged in as a guest!</p>
+      <h2>Consider Registering</h2>
+      <p>We offer free registration and data Assurance</p>
 
-      <a href="index.html">Go back to the Login Page</a>
+      <a href="Login-Page.html">Go back to the Login Page</a>
     </div>
   </body>
 </html>
