--- a/Login-Page.html
+++ b/Login-Page.html
@@ -18,7 +18,7 @@
       </form>
 
       <p class="message">
-        Wishing you all the happiness and joy on your special day!
+        Consider Registering if not login as Guest!
       </p>
 
       <div class="card-links">
