--- a/Login-Page.html
+++ b/Login-Page.html
@@ -10,10 +10,10 @@
     <div class="card" id="greeting-card">
       <h1>Create Account</h1>
       <form id="loginForm" method="post">
-        <input type="text" name="username" placeholder="Username" required />
-        <input type="email" name="email" placeholder="Email" required />
-        <input type="password" name="password" placeholder="Password" required />
-        <input type="password" name="confirm" placeholder="Confirm Password" required />
+        <input type="text" name="username" placeholder="Username" required>
+        <input type="email" name="email" placeholder="Email" required>
+        <input type="password" name="password" placeholder="Password" required>
+        <input type="password" name="confirm" placeholder="Confirm Password" required>
         <button type="submit">Register</button>
       </form>
 
